...
        android:layout_weight="1"
        android:text="@string/username"
        android:textSize="18sp"
        android:textColor="@android:color/white" />

    <ImageButton
        android:id="@+id/followButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:padding="6dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_follower"
        android:visibility="gone"/>

    <Button
        android:id="@+id/unfollowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unfollow"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_search_bar"
...
